# masterTHPT

./: .gitignore  README.md  docker-compose.gpu.yml  implementation_plan.md  requirements.txt
.postman/: resources.yaml
data/scrapers/: README.md  USAGE.md  config.yaml  pyproject.toml  requirements.txt  test_fetch.py
data/scrapers/src/: __init__.py  cli.py  config.py  core.py  pdf_splitter.py  tool_api.py
data/scrapers/src/exam_scraper/: __init__.py  cli.py  config.py
data/scrapers/src/exam_scraper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/scrapers/src/exam_scraper/core/: base_crawler.py  browser_client.py  crawl_transaction.py  dedup.py  detectors.py  downloader.py  http_client.py  pdf_extractor.py  playwright_crawler.py
data/scrapers/src/exam_scraper/db/: models.py  session.py
data/scrapers/src/exam_scraper/routing/: deep_crawl.py
data/scrapers/src/exam_scraper/spiders/: base_spider.py  doctailieu.py  generic.py  hoc247.py  thi247.py  toanmath.py  vietjack.py
data/scrapers/src/exam_scraper/utils/: file_utils.py  query_intent.py  ua_pool.py  url_utils.py
data/scrapers/tests/: test_download_detector.py  test_downloader_validation.py  test_duplicate_detection.py  test_extractor.py  test_playwright_pdf_detection.py  test_query_intent.py  test_subject.py  test_thi247.py  test_transaction.py  test_utils.py
docs/: COORDINATION.md  proposal.md  test.py  workflow.bkp
infra/: .env.ai  .env.example  docker-compose-ai.yaml  docker-compose-azure.yml  docker-compose-db.yml  docker-compose-web.yml  init.sql
(+271 files in other folders)
