[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-scraper"
version = "0.1.0"
description = "Vietnamese exam PDF scraper tool"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "cloudscraper>=1.2.71",
    "beautifulsoup4>=4.12.0",
    "selectolax>=0.3.21",
    "aiosqlite>=0.19.0",
    "typer>=0.12.0",
    "pydantic-settings>=2.2.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
exam-scraper = "exam_scraper.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
